Update - testing out cicd to generate executable.